added drawer tab names

--- a/public/i18n/en/translation.json
+++ b/public/i18n/en/translation.json
@@ -1,5 +1,11 @@
 {
   "appName": "Modmail",
+  "drawer": {
+    "tabs": {
+      "categories": "Categories",
+      "threads": "Threads"
+    }
+  },
   "errors": {
     "splash": {
       "noSelector": "You must specify a selector to use splash",
