implementation of members api implemented members api requests in both `/threads` and `/threads/{{id}}` to load user data such as names and avatars of who is sending what.

--- a/public/i18n/en/translation.json
+++ b/public/i18n/en/translation.json
@@ -8,7 +8,9 @@
     "categories": "$t(urls.base)/categories",
     "categoriesOne": "$t(urls.base)/categories/{{category}}",
     "threads": "$t(urls.base)/categories/{{category}}/threads",
-    "threadsOne": "$t(urls.base)/categories/{{category}}/threads/{{thread}}"
+    "threadsOne": "$t(urls.base)/categories/{{category}}/threads/{{thread}}",
+    "fetchMember": "$t(urls.base)/categories/{{category}}/members/{{member}}",
+    "fetchMembers": "$t(urls.base)/categories/{{category}}/members"
   },
   "drawer": {
     "tabs": {
