--- a/public/i18n/en/translation.json
+++ b/public/i18n/en/translation.json
@@ -9,7 +9,7 @@
     "categoriesOne": "$t(urls.base)/categories/{{category}}",
     "threads": "$t(urls.base)/categories/{{category}}/threads",
     "threadsOne": "$t(urls.base)/categories/{{category}}/threads/{{thread}}",
-    "fetchMember": "$t(urls.base)/categories/{{category}}/members/{{member}}",
+    "fetchMember": "$t(urls.base)/categories/{{category}}/users/{{member}}",
     "fetchMembers": "$t(urls.base)/categories/{{category}}/members"
   },
   "drawer": {
