added badges / style changes to messages

--- a/public/i18n/en/pages.json
+++ b/public/i18n/en/pages.json
@@ -16,5 +16,8 @@
     "title2": "List of all threads in the <b><u>{{category}}</u></b> category.",
     "noThreadsTitle": "No threads",
     "noThreadsDesc": "There are currently no threads in the {{category, emphasis}} category."
+  },
+  "thread": {
+    "eof": "<b>Ouh!</b><br />You've reached the end of the thread!"
   }
 }
