impl better request limiting

--- a/public/i18n/en/translation.json
+++ b/public/i18n/en/translation.json
@@ -3,6 +3,7 @@
   "cookie": "connect.sid",
   "urls": {
     "base": "/api",
+    "discordBase": "https://discord.com/api",
     "oauth": "$t(urls.base)/oauth",
     "authenticate": "$t(urls.base)/self",
     "categories": "$t(urls.base)/categories",
@@ -10,7 +11,8 @@
     "threads": "$t(urls.base)/categories/{{category}}/threads",
     "threadsOne": "$t(urls.base)/categories/{{category}}/threads/{{thread}}",
     "fetchMember": "$t(urls.base)/categories/{{category}}/users/{{member}}",
-    "fetchMembers": "$t(urls.base)/categories/{{category}}/members"
+    "fetchMembers": "$t(urls.base)/categories/{{category}}/members",
+    "fetchDiscordMember": "$t(urls.discordBase)/users/@me"
   },
   "drawer": {
     "tabs": {
