--- a/public/i18n/en/pages.json
+++ b/public/i18n/en/pages.json
@@ -19,5 +19,20 @@
   },
   "thread": {
     "eof": "<b>Ouh!</b><br />You've reached the end of the thread!"
+  },
+  "userHistory": {
+    "profile": {
+      "title": "Thread History",
+      "historyFor": "Viewing history for: <b>{{user}}</b>",
+      "categoryName": "Current Category: <b>{{category}}</b>",
+      "total": "Total Threads: <b>{{total}}</b>",
+      "unknownUser": "Unknown User",
+      "unknownCategory": "Unknown Category"
+    },
+    "actions": {
+      "title": "Actions",
+      "archive": "View Complete Archive",
+      "lookup": "Lookup User History"
+    }
   }
 }
