added /logout action

--- a/public/i18n/en/translation.json
+++ b/public/i18n/en/translation.json
@@ -5,6 +5,7 @@
     "base": "/api",
     "discordBase": "https://discord.com/api",
     "oauth": "$t(urls.base)/oauth{{redirect}}",
+    "logout": "$t(urls.base)/logout",
     "authenticate": "$t(urls.base)/self",
     "categories": "$t(urls.base)/categories",
     "categoriesOne": "$t(urls.base)/categories/{{category}}",
