added titles to pages

--- a/public/i18n/en/translation.json
+++ b/public/i18n/en/translation.json
@@ -1,5 +1,6 @@
 {
-  "appName": "Modmail",
+  "guildName": "Floor-Gang",
+  "appName": "$t(guildName) Modmail",
   "cookie": "connect.sid",
   "urls": {
     "base": "/api",
