--- a/public/i18n/en/translation.json
+++ b/public/i18n/en/translation.json
@@ -1,6 +1,7 @@
 {
   "guildName": "Floor-Gang",
   "appName": "$t(guildName) Modmail",
+  "maxConcurrentRequests": 2,
   "urls": {
     "base": "/api",
     "discordBase": "https://discord.com/api",
